implemented flip card, initial card side selection and card placing on the Board logic